[package]
name = "full-node"
version = "0.2.2"
edition = "2024"
license = "MIT"

[dependencies]
axum = "0.8.9"
borsh = { version = "1.6", features = ["derive"] }
hex = "0.4"
futures-util = "0.3"
libp2p = { version = "0.56", default-features = false, features = ["gossipsub", "identify", "json", "macros", "noise", "ping", "request-response", "tcp", "tokio", "yamux"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = "0.6.4"
lmdb = { package = "lmdb-rkv", version = "0.14" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
paqus = { version = "=0.2.6", path = "../core" }
